# awesome-android-jni

./: README.md
1. OpenCV.so/: demo.cpp
1. OpenCV.so/include/opencv2/: core.hpp  dnn.hpp  ml.hpp
1. OpenCV.so/include/opencv2/core/: core_c.h  mat.hpp
1. OpenCV.so/include/opencv2/imgproc/: imgproc_c.h
2. tensorflow-lite.so/: demo.cpp
2. tensorflow-lite.so/include/: include.rar
3. caffe.so/: CMakeLists.txt  caffe_jni.h  demo.cpp  libcaffe_jni的源代码文件_请不要在项目中解压_防止重定义.rar
3. caffe.so/include/caffe/proto/: caffe.pb.h
5. boost.a/: lib.rar
